# mlops

first_task/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
